--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "start": "vite"
   },
   "devDependencies": {
-    "dotenv": "^16.0.3",
     "vite": "^4.3.2"
   },
   "dependencies": {
@@ -21,6 +20,7 @@
     "@mui/material": "^5.13.1",
     "@tanstack/react-query": "^4.29.7",
     "@vitejs/plugin-react": "4.0.0",
+    "eslint-config-prettier": "^8.8.0",
     "firebase": "^9.22.0",
     "formik": "^2.2.9",
     "react": "18.2.0",
