--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@auth0/auth0-react": "^2.1.0",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
+    "@eslint/create-config": "^0.4.3",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.1",
     "@tanstack/react-query": "^4.29.7",
