--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "formik": "^2.2.9",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-image-file-resizer": "^0.4.8",
     "react-router-dom": "^6.11.2",
     "sass": "^1.62.1",
     "yup": "^1.1.1"
