--- a/package.json
+++ b/package.json
@@ -10,29 +10,26 @@
     "start": "vite"
   },
   "devDependencies": {
-    "eslint": "^8.41.0",
     "eslint-plugin-react": "^7.32.2",
-    "vite": "^4.3.2"
+    "vite": "^4.3.9"
   },
   "dependencies": {
     "@auth0/auth0-react": "^2.1.0",
-    "@emotion/react": "^11.11.0",
+    "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@eslint/create-config": "^0.4.3",
     "@mui/icons-material": "^5.11.16",
-    "@mui/material": "^5.13.1",
-    "@tanstack/react-query": "^4.29.7",
+    "@mui/material": "^5.13.5",
+    "@tanstack/react-query": "^4.29.12",
     "@vitejs/plugin-react": "4.0.0",
-    "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "firebase": "^9.22.0",
-    "formik": "^2.2.9",
+    "firebase": "^9.22.2",
+    "formik": "^2.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-image-file-resizer": "^0.4.8",
-    "react-router-dom": "^6.11.2",
-    "sass": "^1.62.1",
-    "yup": "^1.1.1"
+    "react-router": "^6.12.1",
+    "react-router-dom": "^6.12.1",
+    "sass": "^1.63.3",
+    "yup": "^1.2.0"
   },
   "description": "<h1 align=\"center\">Hi 👋, I'm Ezequiel</h1> <h3 align=\"center\">A proactive web developer from Argentina</h3>",
   "main": "vite.config.js",
