--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.5",
-    "@tanstack/react-query": "^4.29.14",
-    "@vitejs/plugin-react": "4.0.0",
+    "@tanstack/react-query": "^4.29.15",
+    "@vitejs/plugin-react": "^4.0.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "firebase": "^9.22.2",
     "formik": "^2.4.2",
