--- a/package.json
+++ b/package.json
@@ -18,16 +18,17 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.16",
-    "@mui/material": "^5.13.5",
-    "@tanstack/react-query": "^4.29.15",
+    "@mui/material": "^5.13.6",
+    "@tanstack/react-query": "^4.29.17",
     "@vitejs/plugin-react": "^4.0.1",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "firebase": "^9.22.2",
+    "firebase": "^9.23.0",
     "formik": "^2.4.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-router": "^6.13.0",
-    "react-router-dom": "^6.13.0",
+    "react-paginate": "^8.2.0",
+    "react-router": "^6.14.0",
+    "react-router-dom": "^6.14.0",
     "sass": "^1.63.6",
     "yup": "^1.2.0"
   },
