--- a/package.json
+++ b/package.json
@@ -34,5 +34,6 @@
   "description": "<h1 align=\"center\">Hi 👋, I'm Ezequiel</h1> <h3 align=\"center\">A proactive web developer from Argentina</h3>",
   "main": "vite.config.js",
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "keywords": []
 }
